--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,13 +1,17 @@
 amqp==5.3.1
+asgiref==3.11.0
 async-timeout==5.0.1
 billiard==4.2.1
 blinker==1.9.0
 celery==5.5.2
+certifi==2025.11.12
+charset-normalizer==3.4.4
 click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
+Django==5.2.8
 dnspython==2.7.0
 email_validator==2.2.0
 Flask==3.1.0
@@ -20,12 +24,14 @@ Flask-Security-Too==5.6.1
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
 greenlet==3.1.1
+gunicorn==24.1.1
 idna==3.10
 importlib_resources==6.5.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
 kombu==5.5.3
 MarkupSafe==3.0.2
+packaging==26.0
 passlib==1.7.4
 pillow==11.2.1
 prompt_toolkit==3.0.51
@@ -34,10 +40,13 @@ PyJWT==2.10.1
 PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
 redis==5.2.1
+requests==2.32.5
 six==1.17.0
 SQLAlchemy==2.0.39
+sqlparse==0.5.3
 typing_extensions==4.12.2
 tzdata==2025.2
+urllib3==2.5.0
 vine==5.1.0
 wcwidth==0.2.13
 Werkzeug==3.1.3
